--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,25 @@
 /*  your css code here. If applicable */
+body#card{
+	width:vw;
+	height:vh;
+	display:block;
+	background-color:blue;
+	box-sizing: border-box;
+	padding:10px 10px 10px 10px;
+	text-align:center;
+}
+image{
+	display:inline-block;
+	height:100px;
+	width:100px;
+}
+button{
+	background-color:blue;
+	color:white;
+	border-radius:10%;
+	width:100px;
+	height:30px;
+	vertical-align:center;
+	box-shadow:30px 15px 15px aqua;
+	padding:15px 15px 15px 15px;
+}
